5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1635_2446.log
== TEST (2019-04-04 19:12:35) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 1000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:38) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 100000) % 1000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
0
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:57) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 1000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:16:33) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 100000) % 10000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
0
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:17:26) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 100000) % 1000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
0
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:19:00) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 10000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:21:41) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 1000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:21:52) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 1000
D3 = (senha // 1000) % 100
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
87
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:22:08) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 100000) % 10000
D3 = (senha // 10000) % 1000
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
0
8
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:22:35) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 100
D3 = (senha // 100) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
6
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:22:53) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 1000
D3 = (senha // 100) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
6
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:24:06) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = D1 % 10000

print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(D3)
NameError: name 'D3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:25:55) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = D1 % 100000
D3 = D2 // 10000
D4 = D3 % 10000
D5 = D4 // 1000
D6 = D5 % 10


print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:26:23) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = D1 % 10000
D3 = D2 // 1000
D4 = D3 % 100
D5 = D4 // 10
D6 = D5 % 10


print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:28:29) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha % 100000)
D3 = (D2 // 10000)



print(D1)
print(D2)
print(D3)

-- OUTPUT:
0
87612
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:29:35) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha % 100000)//10000




print(D1)
print(D2)


-- OUTPUT:
0
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:30:56) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha % 100000)//10000
D3 = (D2 % 10000)//1000





print(D1)
print(D2)
print(D3)


-- OUTPUT:
0
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:31:55) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha % 100000)//10000
D3 = (D2 % 100000)//1000





print(D1)
print(D2)
print(D3)


-- OUTPUT:
0
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:51) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10






print(D1)
print(D2)
print(D3)


-- OUTPUT:
0
8
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:36:12) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)






print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- EXECUTION TIME:
0.152052
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
8
7
6
1
2
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
7
6
0
8
3
4
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
1
2
2
9
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:36:14) 
-- CODE:
senha = int(input("Senha: "))

D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)






print(D1)
print(D2)
print(D3)
print(D4)
print(D5)
print(D6)
-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:39:59) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if ((D2 + D4 + D6)/6 = D1 + D3 + D5):
	msg = "senha valida"
else:
	msg = "senha invalida"
print(msg)
-- ERROR:
File "XXXX", line 10
    if ((D2 + D4 + D6)/6 = D1 + D3 + D5):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:40:09) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if ((D2 + D4 + D6)/6 == D1 + D3 + D5):
	msg = "senha valida"
else:
	msg = "senha invalida"
print(msg)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:40:20) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if ((D2 + D4 + D6)/6 == D1 + D3 + D5):
	msg = "senha valida"
else:
	msg = "senha invalida"
print(msg)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:43:38) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if (D2 + D4 + D6 % D1 + D3 + D5 !=0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (D2 + D4 + D6 % D1 + D3 + D5 !=0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:43:46) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if (D2 + D4 + D6 % D1 + D3 + D5 !=0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if (D2 + D4 + D6 % D1 + D3 + D5 !=0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:45:08) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if ((D2 + D4 + D6) % (D1 + D3 + D5)!=0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:45:17) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = (senha // 100000) 
D2 = (senha // 10000) % 10
D3 = (senha // 1000) % 10
D4 = (senha // 100) % 10
D5 = (senha // 10) % 10
D6 = (senha % 10)

if ((D2 + D4 + D6) % (D1 + D3 + D5)!=0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.153588
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:01:17) 
-- CODE:
senha = int(input("Senha: "))
# Separando os digitos
D1 = senha // 100000
D2 = (senha % 100000) // 10000
D3 = (senha % 10000) // 1000
D4 = (senha % 1000) // 100
D5 = (senha % 100) // 10
D6 = senha % 10

if ((D2 + D4 + D6) % (D1 + D3 + D5)!=0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)
-- EXECUTION TIME:
0.142591
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
